# sillywalks

./: .gitignore  Makefile  README.md  setup.cfg  silly.py  test_silly.py
.github/workflows/: python-lint.yml  python-release.yml  python-tests.yml
