[metadata]
name = sillywalks
version = 2024.9.1
description = sillwalks is a command line tool to monitor resource usage of a process
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dnouri/sillywalks
classifiers =
    Programming Language :: Python :: 3
author = Daniel Nouri
license = MIT
license_file = LICENSE

[options]
zip_safe = False
include_package_data = True
packages = find:
py_modules =
    silly
install_requires =
    psutil
    matplotlib

[options.entry_points]
console_scripts =
    sillywalks = silly:main

[options.extras_require]
devel =
    black==24.1.1
    ruff==0.2.1
